--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,11 @@
     "typescipt": "^1.0.0"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^11.1.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^7.1.0"
   }
 }
