--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "es2015",
     "outDir": "./build",
     "strict": true,
-    "module": "CommonJS",
-    "esModuleInterop": true
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
