--- a/web/package.json
+++ b/web/package.json
@@ -18,12 +18,15 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.11.0"
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.11.0",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-bootstrap": "^0.26.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
