--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://oversizeuser:q5NQE7XAOEcJUC1e@cluster0.dgvd742.mongodb.net/oversizedb?retryWrites=true&w=majority
+JWT_SECRET=secret_jwt_key
