integrate paypal payment

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://oversizeuser:q5NQE7XAOEcJUC1e@cluster0.dgvd742.mongodb.net/oversizedb?retryWrites=true&w=majority
 JWT_SECRET=secret_jwt_key
+PAYPAL_CLIENT_ID=AfS1yX-2ncmS7lRFdYvOhvSJAaL78B7qLnLlYVdR8C5uoLuNFfksXmbx-ztFR2jpapm3B7wiq1_AaLTK
