--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "composite": true,
     "outDir": "./build",
-    "strict": true,
+    "target": "ES2017",
     "module": "commonjs",
-    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
-  }
+    "resolveJsonModule": true,
+    "strict": true
+  },
+  "include": ["**/*.ts"]
 }
