--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MERN stack (MongoDB, ExpressJS, React and Node.JS)",
   "main": "index.js",
   "scripts": {
-    "build": "cd web && npm install && npm run build && cd ../server && npm install && npm run build",
+    "build": "cd server && npm install && npm run build && cd ../web && npm install && npm run build",
     "start": "TG_ALLOW_MIXED=ALLOW  node server/build/src/index.js"
   },
   "repository": {
