--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,7 @@
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
     "ts-node-dev": "^2.0.0",
-    "typescipt": "^1.0.0"
+    "typescript": "5.0.4"
   },
   "dependencies": {
     "@typegoose/typegoose": "^11.1.0",
