--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
