--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/Akbar1437/oversize-shop.git"
   },
-  "author": "",
+  "author": "Akbar Khushnazarov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Akbar1437/oversize-shop/issues"
