--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2"
