work on admin panel add, edit product implementation , integrated cloudinary

--- a/server/.env.dist
+++ b/server/.env.dist
@@ -1,3 +1,6 @@
 MONGODB_URI=your_url
 JWT_SECRET=secret_jwt_key
 PAYPAL_CLIENT_ID=your_paypal_client_id
+CLOUDINARY_CLOUD_NAME=your cloudinary domain name
+CLOUDINARY_API_KEY=your cloudinary api key
+CLOUDINARY_API_SECRET=your cloudinary api secret 
